# email/index.js
@@ -29,18 +29,50 @@ module.exports.sendMail = function(res, userDetails) {
         res.send('Email Sent');
     });
 };
-/**
-app.mailer.send('email', {
-    to: 'example@example.com', // REQUIRED. This can be a comma delimited string just like a normal email to field.
-    subject: 'Test Email', // REQUIRED.
-    otherProperty: 'Other Property' // All additional properties are also passed to the template as local variables.
-  }, function (err) {
-    if (err) {
-      // handle error
-      console.log(err);
-      res.send('There was an error sending the email');
-      return;
+
+
+
+module.exports.sendFeedbackEmail = function(res, args) {
+   
+  var email_json =  {
+        to: 'arunfrom92@gmail.com',
+        subject:  args.body.value.subject, 
+        firstName: args.user.firstName,
+        feedback : args.body.value.feedback,
+        'email_id': args.user.email
     }
-    res.send('Email Sent');
-  });
-**/
+
+    console.log(email_json)
+
+    appGbl.mailer.send('feedback', email_json, function(err,data) {
+        if (err) {
+            console.log("Error" + err);
+            res.send('There was an error sending the email');
+            return;
+        }
+        console.log("Email Sent: " + data)
+        res.send('Email Sent');
+    });
+};
+
+module.exports.sendInvite = function(res, args) {
+   
+  var email_json =  {
+        bcc: args.body.value.email_list,
+        email_id : args.user.email,
+        firstName: args.user.firstName
+    }
+
+    console.log(email_json);
+
+    appGbl.mailer.send('invite', email_json, function(err,data) {
+        if (err) {
+            console.log("Error" + err);
+            res.send('There was an error sending the email');
+            return;
+        }
+        console.log("Email Sent: " + data)
+        res.send('Email Sent');
+    });
+};
+
